Fix distortion of publications photo on mobile

--- a/kay3/styles/main.css
+++ b/kay3/styles/main.css
@@ -53,6 +53,10 @@ img#pubPhoto {
   height: 100%;
 }
 
+ul#pubLinks>li {
+  margin-bottom: 10px;
+}
+
 footer ul.nav {
   padding-left: 5px;
 }
